@@ -77,11 +77,11 @@ struct _AgsFxLv2Audio
   guint input_port_count;
   guint *input_port;
 
-  gboolean has_event_port;
-  guint event_port;
+  gboolean has_midiin_event_port;
+  guint midiin_event_port;
   
-  gboolean has_atom_port;
-  guint atom_port;
+  gboolean has_midiin_atom_port;
+  guint midiin_atom_port;
   
   guint bank;
   guint program;
